<resources>
    <string name="app_name">Labor_Management_App</string>

    <!-- Splash Strings -->
    <string name="splash_text1">ICan Labor Management</string>

    <!-- Login Screen Strings -->
    <string name="login_text1">Welcome Back,</string>
    <string name="login_text2">Username</string>
    <string name="login_text3">Password</string>
    <string name="login_text4">Forgot Password?</string>
    <string name="login_text5">Login</string>
    <string name="login_text6">Create One?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_Add_Labor">Add New Labor</string>
    <string name="menu_View_Labor">View Labors</string>
    <string name="menu_labor_attendance">Labor Attendance</string>
    <string name="menu_payments">Payments</string>

<!-- Add New Labor Section -->
    <string name="add_new_labor_title">Add New Labor</string>
    <string name="personal_information">Personal Information</string>
    <string name="work_information">Work Information</string>
    <string name="full_name_hint">Full Name</string>
    <string name="nic_no">NIC No</string>
    <string name="employee_dob">Date Of Birth</string>
    <string name="phone_hint">Phone Number</string>
    <string name="email_hint">Email</string>
    <string name="address_hint">Address</string>
    <string name="job_role_hint">Job Role</string>
    <string name="daily_wage_hint">Daily Wage</string>
    <string name="join_date_hint">Join Date</string>
    <string name="add_labor_button">Add Labor</string>
    <string name="name_required">Name is required</string>
    <string name="phone_required">Phone number is required</string>
    <string name="email_required">Email is required</string>
    <string name="labor_added_success">Labor added successfully!</string>
    <string name="error_saving_labor">Error saving labor data</string>

<!-- View Labor Details -->
    <string name="labor_reg">Labor Register ID</string>
    <string name="labor_details">Labor Details</string>
    <string name="labor_full_name">Full Name</string>
    <string name="labor_age">Age</string>
    <string name="labor_contact">Contact No</string>
    <string name="labor_nic">NIC No</string>
    <string name="labor_reg_date">Registered Date</string>
    <string name="labor_ads1">Address Line 1</string>
    <string name="labor_ads2">Address Line 2</string>
    <string name="labor_city">City</string>
    <string name="labor_working_area">Working Section</string>
    <string name="labor_upd_btn">Update Details</string>
    <string name="labor_pf_btn">Labor Performance</string>

    <string name="rem_payouts">Remaining Payouts</string>
    <string name="no_internet_icon"></string>
</resources>